[project]
name = "StatsPlot"
dynamic = ['version']
authors = [
    { name = "Benjamin Roland", email = "benjamin.roland@hotmail.fr" },
]
description = "Interactive statistical vizualization in Python"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = ["pydantic", "seaborn", "plotly", "pymodules @ git+https://github.com/Parici75/pymodules@0.1.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Parici75/statsplot"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
local_scheme = 'node-and-date'
version_scheme = 'guess-next-dev'

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

# mypy config
[tool.mypy]
exclude = ['tests.*']
allow_untyped_defs = false
# mypy per-module options:
[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "pandas.*", "matplotlib.*", "seaborn.*", "plotly.*", "pymodules.*"]
ignore_missing_imports = true
